[fix] events now use full width of time slot on mobile (removed inset)

--- a/frontend/styles_responsive.css
+++ b/frontend/styles_responsive.css
@@ -307,4 +307,8 @@
     .fc .fc-timegrid-slot-minor {
         display: none !important;
     }
+
+    .fc-timegrid-event-harness>.fc-timegrid-event {
+        inset: 0 !important;
+    }
 }
